Implemented basic CI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,38 @@
+amqp==5.3.1
 asgiref==3.9.1
+billiard==4.2.1
+celery==5.5.3
+certifi==2025.8.3
 cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 Django==5.2.5
 django-appconf==1.1.0
 django-compressor==4.5.1
 django-hosts==7.0.0
 django-libsass==0.9
+django-sass-processor==1.4.2
+idna==3.10
+kombu==5.5.4
 libsass==0.23.0
+packaging==25.0
 path==17.1.1
+podman==5.5.0
+prompt_toolkit==3.0.51
 pycparser==2.22
 pygit2==1.18.2
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
 rcssmin==1.1.2
+redis==6.4.0
+requests==2.32.5
 rjsmin==1.2.2
+six==1.17.0
 sqlparse==0.5.3
+tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
